# hm.hnnl.eu

./: .gitignore  .sops.yaml  .yamllint.yaml  README.md
.github/: renovate.json5
.github/workflows/: deploy-docs.yaml  validate.yaml
bootstrap/: bootstrap.sh
bootstrap/talos/: gen-config.sh
bootstrap/vm/: setup-mac-mini-vm.sh
cli/: README.md  pyproject.toml  test_report.md
cli/hm_cli/: __init__.py  cli.py  cluster.py  core.py  gitops.py  service.py
cli/tests/: conftest.py  test_cli_old.py  test_documentation.md  test_fixes.md  test_suite_design.md
cli/tests/integration/: test_cluster_commands.py  test_gitops_commands.py  test_service_commands.py
cli/tests/unit/: test_cli.py  test_cluster.py  test_core.py  test_gitops.py  test_service.py
cluster/: README.md
cluster/apps/: kustomization.yaml
cluster/config/: kustomization.yaml
cluster/core/: kustomization.yaml
cluster/flux/: kustomization.yaml
cluster/secrets/: kustomization.yaml
docs-src/: .gitignore  README.md  dns-access-setup.md  implementation-summary.md  mkdocs.yml  secret-management-guide.md
docs-src/docs/: index.md
docs-src/images/: dns-access-architecture.md
docs.old/: README.md  getting-started.md  integration.md  netbird.md  overview.md  troubleshooting.md  zitadel.md
infrastructure/talos/: common.yaml  controlplane-patch.yaml  mac-mini-controlplane-patch.yaml  worker-patch.yaml
scripts/: check-cluster.sh  generate-secret-values.sh  make-scripts-executable.sh
scripts/dns/: generate-tsig-key.sh  update-network-config.sh
scripts/sops/: create-age-secret.sh  decrypt.sh  (+2 more)
(+90 files in other folders)
